# golduck

./: Cargo.toml
example/: Cargo.toml
example/src/: is_page.rs  main.rs
example/src/page/: message.rs  mod.rs
example/ui/: main.glade  message.glade
src/: alert.rs  builder.rs  lib.rs  util.rs
