[package]
name = "example"
version = "0.1.0"
authors = ["荀徒之 <kalxd@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
golduck = { path = ".." }
glib = "0.10.3"
# gtk = "0.9.2"
# gio = "0.9.1"
# glib = "0.10.3"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22"]
